set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_STATIC_LIBRARY_PREFIX "")

file(GLOB_RECURSE LIBWIRE_HEADERS ../include/*.hpp)
file(GLOB_RECURSE LIBWIRE_SOURCES *.cpp)
file(GLOB_RECURSE LIBWIRE_POSIX_SOURCES posix/*.cpp)

if(UNIX)
    set(LIBWIRE_PLATFORM "POSIX")
else()
    message(FATAL "libwire doesn't supports your target platform. :(")
endif()

set(LIBWIRE_ALL_SOURCES ${LIBWIRE_SOURCES} ${LIBWIRE_${LIBWIRE_PLATFORM}_SOURCES} PARENT_SCOPE)
set(LIBWIRE_ALL_HEADERS ${LIBWIRE_HEADERS} ${LIBWIRE_${LIBWIRE_PLATFORM}_HEADERS} PARENT_SCOPE)

add_library(libwire ${LIBWIRE_SOURCES} ${LIBWIRE_${LIBWIRE_PLATFORM}_SOURCES})
target_include_directories(libwire PUBLIC
        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/include/>)

include(GNUInstallDirs)

install(TARGETS libwire
        EXPORT libwire-targets
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        )
